@@ -1,5 +1,11 @@
 2014-09-15  Georg-Johann Lay  <avr@gjlay.de>
 
+	* avrtest.c (opcode_data): Rename to opcode_t.  Move .size and
+	.cycles to the end of the structure.
+	(opcode_func_array): Adjust initialization.
+
+2014-09-15  Georg-Johann Lay  <avr@gjlay.de>
+
 	* Makefile: Build xmega executables and exit*.o per default.
 	Strip all executables.
 	(CFLAGS): Use -Os instead of -O3.
